--- a/_config.yml
+++ b/_config.yml
@@ -72,3 +72,22 @@ deploy:
     repository: git@github.com:ischuncheng/ischuncheng.github.com.git
     branch: master
 
+
+jsonContent:
+    meta: false
+    pages: false
+    posts:
+      title: true
+      date: true
+      path: true
+      text: false
+      raw: false
+      content: false
+      slug: false
+      updated: false
+      comments: false
+      link: false
+      permalink: false
+      excerpt: false
+      categories: false
+      tags: true
