--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -1,8 +1,8 @@
 # Header
 
 menu:
-  主页: /
-  #随笔: /tags/随笔/
+  主页: /archives/
+  我的足迹: /map.html
 
 # SubNav
 subnav:
@@ -28,7 +28,7 @@ rss: /atom.xml
 # 是否需要修改 root 路径
 # 如果您的网站存放在子目录中，例如 http://yoursite.com/blog，
 # 请将您的 url 设为 http://yoursite.com/blog 并把 root 设为 /blog/。
-root: 
+root:
 
 # Content
 
@@ -51,7 +51,7 @@ reward_wording: '谢谢你请我喝咖啡'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
 alipay: http://7xkghb.com1.z0.glb.clouddn.com/Alipay.jpg
 # 微信二维码图片地址
-weixin: 
+weixin:
 
 # Miscellaneous
 baidu_analytics: ''
